--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,8 @@ name = "pypi"
 django = "*"
 mssql-django = "==1.0b1"
 celery = "*"
+django-celery-results = "*"
+sqlalchemy = "*"
 
 [dev-packages]
 
